--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
-    "typescript": "^5"
+    "sass": "^1.69.5",
+    "typescript": "^5",
+    "typescript-plugin-css-modules": "^5.0.2"
   }
 }
